# dexter-rl

./: .gitignore  LICENSE  README.md  pyproject.toml
datasets/: songs.jsonl
dexter_agent/: .env.example  README.md  agent.py  demo_smoke_on_water.py  requirements.txt  test_client.py  token_server.py
dexter_app/: .env.example  app.json  config.ts  package-lock.json  package.json
dexter_app/app/: _layout.tsx
dexter_app/app/(tabs)/: _layout.tsx  index.tsx  practice.tsx  review.tsx
dexter_app/components/: themed-text.tsx  themed-view.tsx
dexter_app/components/practice/: bar-controls.tsx  bar-header.tsx  bar-tab-view.tsx  camera-feed.tsx  coaching-feed.tsx  coaching-toast.tsx  debug-log.tsx  live-metrics.tsx
dexter_app/components/setup/: metadata-bar.tsx  (+4 more)
dexter_app/constants/: theme.ts
dexter_app/context/: session-context.tsx
dexter_app/data/: smoke-on-the-water.ts
dexter_app/hooks/: use-audio-analysis.ts  use-audio-stream.ts  use-camera-stream.ts  use-practice-session.ts  use-song-search.ts  use-tab-data.ts  use-theme-color.ts
dexter_app/services/: audio-analysis.ts  browserbase-mock.ts  browserbase.ts  gemini-coach.ts  gemini-live.ts  gemini.ts  livekit-token.ts  livekit.ts  songsterr.ts  tab-parser.ts
dexter_app/types/: tab.ts
dexter_app/utils/: debug-log.ts
dexter_rl/: __init__.py  bridge.py  env.py  evaluator.py  rewards.py  tabs.py
docs/plans/: 2026-03-07-dexter-rl-design.md  2026-03-07-dexter-rl-implementation.md
scripts/: demo.py
tests/: test_bridge.py  test_env.py  test_evaluator.py  test_integration.py  test_rewards.py  test_tabs.py
(+3 files in other folders)
