[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dexter-rl"
version = "0.1.0"
description = "RL environment for training AI music coaches"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.9",
    "google-genai>=1.0.0",
    "browserbase>=1.0.0",
    "playwright>=1.40.0",
    "websockets>=13.0",
    "datasets>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
